--- a/MarsBot-master/package.json
+++ b/MarsBot-master/package.json
@@ -1,8 +1,13 @@
 {
+    
   "name": "marsbot",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+    "scripts": {
+    "start": "node app.js" // tells the web service where the start script is
+    },
+    
   "dependencies": {
     "botbuilder": "^3.5.1",
     "mongodb": "^2.2.19",
