--- a/MarsBot-master/package.json
+++ b/MarsBot-master/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "app.js",
     "scripts": {
-    "start": "node app.js" // tells the web service where the start script is
+    "start": "node app.js"
     },
     
   "dependencies": {
